# daf_butler_migrate

./: .gitignore  .pre-commit-config.yaml  README.rst  SConstruct  migrate_uuid.sh  mypy.ini  pyproject.toml  recreate_history.sh  requirements.txt  run_mypy.sh  setup.cfg  setup.py
.github/: pull_request_template.md
.github/workflows/: build.yaml  build_docs.yaml  formatting.yaml  mypy.yaml
doc/: conf.py  index.rst  manifest.yaml
doc/changes/: DM-50958.feature.md
doc/lsst.daf.butler_migrate/: command-line.rst  common-migrations.rst  concepts.rst  index.rst  migration-scripts.rst  typical-tasks.rst
doc/lsst.daf.butler_migrate/migrations/: collections.rst  datasets.rst  datastores.rst  dimensions-config.rst  dimensions.rst  opaque.rst
migrations/_alembic/: alembic.ini  env.py  script.py.mako
migrations/_oneshot/collections/name_2.0.0_to_int_2.0.0/: 8c57494cabcc.py  8d2e9de2f21f.py  93341d68b814.py
migrations/_oneshot/datasets/int_0.3.0_to_uuid_1.0.0/: 059cc7b7ef13.py  2101fbf51ad3.py  576045cb7831.py
migrations/_oneshot/datasets/int_1.0.0_to_uuid_1.0.0/: 059cc7b7ef13.py  2101fbf51ad3.py  635083325f20.py
migrations/_oneshot/datasets_int_0.3.0_to_uuid_1.0.0/: 059cc7b7ef13.py  2101fbf51ad3.py  635083325f20.py
migrations/_oneshot/datasets_int_1.0.0_to_uuid_1.0.0/: 059cc7b7ef13.py  2101fbf51ad3.py  635083325f20.py  7258d4fe9e88.py  be543f24dcba.py  f1faecdf9038.py
migrations/attributes/: c0e4f9ab4a5d.py  f0a3531f97ca.py  f22a777cf382.py
migrations/collections/: 079a1bc77f25.py  1a93ca89bc27.py  3ce2d3adf1f5.py  5e75e5391603.py  8c57494cabcc.py  8d2e9de2f21f.py  93341d68b814.py  97a6aabd8998.py  a56af31bd899.py  b4073b638219.py  e866114194e1.py
migrations/datasets/: 059cc7b7ef13.py  2101fbf51ad3.py  38a9414ea7a2.py  4e2d7a28475b.py  576045cb7831.py  635083325f20.py  eb5a3cc76666.py
migrations/datastores/: 6e7967ca2f9c.py  a07b3b60e369.py  a81dddabd837.py  bb8b5df7ff80.py
migrations/dimensions/: 035dcf13ef18.py  1601d5973bf8.py  2dea9d903dde.py  36d66ca4d7a3.py  3859eac451aa.py  4f4f243fea82.py  6166dfbb5324.py  87a30df8c8c5.py  a1e0fefed6c7.py  c2671338a42f.py  e45766f0daea.py
migrations/dimensions-config/: 1fae088c80b6.py  2a8a32e1bec3.py  352c30854bb0.py  380002bcbb26.py  3e2891b82110.py  9888256c6a18.py  bf6308af80aa.py  c5ae3a2cd7c2.py  f3bcee34f344.py
migrations/obscore/: 8b8e030aba2b.py  a0d766f99876.py
migrations/obscore-config/: 2daeabfb5019.py  4fe28ef5030f.py  5449f6e37baf.py
migrations/opaque/: 61f6b63d296d.py  77e5b803ad3f.py  c2c46f409743.py
python/lsst/daf/butler_migrate/: __init__.py  _dimensions_json_utils.py  butler_attributes.py  config.py  database.py  digests.py  migrate.py  migration_context.py  naming.py  registry.py  revision.py  scripts.py  shrink.py  timespan.py  version.py
python/lsst/daf/butler_migrate/cli/: _get_cli_subcommands.py  resources.yaml
python/lsst/daf/butler_migrate/cli/cmd/: __init__.py  commands.py
python/lsst/daf/butler_migrate/cli/opt/: __init__.py  arguments.py  options.py
python/lsst/daf/butler_migrate/script/: __init__.py  migrate_add_tree.py  migrate_current.py  migrate_downgrade.py  migrate_dump_schema.py  migrate_history.py  migrate_revision.py  migrate_set_namespace.py  migrate_stamp.py  migrate_trees.py  migrate_upgrade.py  rewrite_sqlite_registry.py  smig_downgrade.py  smig_revision.py  smig_stamp.py  update_day_obs.py
python/lsst/daf/butler_smig/: __init__.py  config.py  smig.py
python/lsst/daf/butler_smig/cli/: resources.yaml
python/lsst/daf/butler_smig/cli/cmd/: __init__.py  commands.py
python/lsst/daf/butler_smig/cli/opt/: arguments.py  options.py
python/lsst/daf/butler_smig/script/: __init__.py  smig_add_tree.py  smig_current.py  smig_downgrade.py  smig_history.py  smig_revision.py  smig_stamp.py  smig_trees.py  smig_upgrade.py
templates/generic/: alembic.ini.mako  env.py  script.py.mako
tests/: test_database.py  test_digests.py  test_dimensions_json.py  test_dimensions_json_utils.py  test_migrate.py  test_revision.py
tests/data/: records.yaml
ups/: daf_butler_migrate.table  daf_butler_smig.table
