[metadata]
name = lsst-butler_migrate
description = An abstraction layer for reading and writing from URI file resources.
author = Rubin Observatory Data Management
url = https://github.com/lsst-dm/daf_butler_migrate
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved ::  GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = True
package_dir=
    =python
packages=find:
setup_requires =
  setuptools >=46.0
install_requires =
  click >7.0
  sqlalchemy >= 1.3
  alembic >= 1.7
  daf_butler @ git+https://github.com/lsst/daf_butler@main
  lsst_utils @ git+https://github.com/lsst/utils@main
  lsst_resources @ git+https://github.com/lsst/resources@main
tests_require =
  pytest >= 3.2
  flake8 >= 3.7.5
  pytest-flake8 >= 1.0.4
  pytest-openfiles >= 0.5.0

[options.packages.find]
where=python

[flake8]
max-line-length = 110
max-doc-length = 79
ignore = E133, E226, E228, N802, N803, N806, N812, N813, N815, N816, W503, E203
exclude =
  bin,
  doc,
  **/*/__init__.py,
  **/*/version.py,
  tests/.tests
per-file-ignores =
  migrations/**:F401,W505

[tool:pytest]
addopts = --flake8
flake8-ignore = E133 E226 E228 N802 N803 N806 N812 N813 N815 N816 W503 E203
